--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Blynk
-version=1.0.0-beta.3
+version=0.6.7
 author=Volodymyr Shymanskyy
 license=MIT
 maintainer=Volodymyr Shymanskyy <vshymanskyi@gmail.com>
