--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ maintainer=Volodymyr Shymanskyy <vshymanskyi@gmail.com>
 sentence=Build a smartphone app for your project in minutes!
 paragraph=It supports  WiFi, BLE, Bluetooth, Ethernet, GSM, USB, Serial. Works with many boards like ESP8266, ESP32, Arduino UNO, Nano, Due, Mega, Zero, MKR100, Yun, Raspberry Pi, Particle, Energia, ARM mbed, Intel Edison/Galileo/Joule, BBC micro:bit, DFRobot, RedBearLab, Microduino, LinkIt ONE ...
 category=Communication
-url=http://blynk.io
+url=https://blynk.io
 architectures=*
 includes=Blynk.h
