--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author=Volodymyr Shymanskyy
 license=MIT
 maintainer=Volodymyr Shymanskyy <vshymanskyi@gmail.com>
 sentence=Build a smartphone app for your project in minutes!
-paragraph=It supports  WiFi, BLE, Bluetooth, Ethernet, GSM, USB, Serial. Works with many boards like ESP8266, ESP32, Arduino UNO, Nano, Due, Mega, Zero, MKR100, Yun, Raspberry Pi, Particle, Energia, ARM mbed, Intel Edison/Galileo/Joule, BBC micro:bit, DFRobot, RedBearLab, Microduino, LinkIt ONE ...
+paragraph=It supports  WiFi, Ethernet, Cellular connectivity. Works with over 400 boards like ESP8266, ESP32, Arduino, Raspberry Pi, Particle, etc.
 category=Communication
 url=https://blynk.io
 architectures=*
