--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=Blynk
 version=1.3.2
-author=Volodymyr Shymanskyy
+author=Blynk
 license=MIT
 maintainer=Volodymyr Shymanskyy <vshymanskyi@gmail.com>
 sentence=Build a smartphone app for your project in minutes!
